# toasted

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  lib.rs
.github/ISSUE_TEMPLATE/: go-public-issue-template.md
.github/workflows/: ci.yml
iocs/: REGISTRY_DEFINITIONS.md  bigtime-vulns.yaml  example-multi-registry.yaml  npm-compromised-2024-09.yaml  npm-duckdb-compromised.yaml
src/: main.rs
test-fixtures/: package-lock.json  package-lock.json.bak  pnpm-lock.yaml
